crates/server-less/tests/fixtures/cli_on_non_impl.stderr
error: expected `impl`
 --> tests/fixtures/cli_on_non_impl.rs:6:1
  |
6 | fn my_function() -> String {
  | ^^
